fixed some spacing

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -28,6 +28,7 @@
 .btn-gradient {
   color: white;
   padding: 8px 24px;
+  margin-right: 8px;
   border-radius: 4px;
   font-weight: bold;
   background: linear-gradient(#167FFB, #0F60C4);
